force-app/main/default/objects/CCE_with_Sub_Contract_19__c.object
<CustomObject>
    <fields>
        <fullName>BE_Sub_Contract_11_ID__c</fullName>
        <label>BE Sub Contract 11 ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCE_Approval_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CCE Approval Process</label>
        <referenceTo>CCE_Approval_Process_19__c</referenceTo>
        <relationshipName>CCE_with_Sub_Contract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCE_Construction_File_URL__c</fullName>
        <formula>IF( AND(CCE_Construction_URL__c == null, Not_Applicable__c == false), &quot;No File&quot; , IF(Not_Applicable__c == true, &quot;Not Applicable&quot; , HYPERLINK(CCE_Construction_URL__c, &quot;Open File&quot;,&quot;_self&quot;)))</formula>
        <label>CCE Approval Form(Construction) File URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCE_Construction_File__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>ไฟล์ข้อมูล CCE ของการทำ Construction</inlineHelpText>
        <label>CCE Approval Form (Construction) File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCE_Construction_URL__c</fullName>
        <label>CCE Construction URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCE_Engineering_File_URL__c</fullName>
        <formula>IF( AND(CCE_Engineering_URL__c == null, CCE_Engineering_Not_Applicable__c == false), &quot;No File&quot; , IF(CCE_Engineering_Not_Applicable__c == true, &quot;Not Applicable&quot; , HYPERLINK(CCE_Engineering_URL__c, &quot;Open File&quot;,&quot;_self&quot;)))</formula>
        <label>CCE Approval Form(Engineering) File URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCE_Engineering_Not_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BE CCE (Engineering) Not Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCE_Engineering_URL__c</fullName>
        <label>CCE Engineering URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Applicable</label>
        <type>Checkbox</type>
    </fields>
    <label>CCE with Sub Contract*</label>
    <nameField>
        <label>Subcontract Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>